--- a/radvalley.tex
+++ b/radvalley.tex
@@ -945,8 +945,7 @@ inspection of the $f_{ij}$ maps in Fig.~\ref{fig:rphistcomp} and are used to dem
 boundaries of each peak, and by extension the valley separating the peaks.
 For example, if the boundaries on the terrestrial peak are set to 1-50 days and 0.8-1.4 R$_{\oplus}$ then only
 the planet occurrence rates over that subset of the $P-r_p$ parameter space are considered when calculated the
-$f_j$-weighted peak radius.  
-The boundaries are listed in Table~\ref{table:bounds}.
+$f_j$-weighted peak radius. The boundaries are listed in Table~\ref{table:bounds}.
 
 In practice we derive $10^3$ realizations of each $f_{ij}$ map with each realization having a unique set of
 hyperparameters. The resulting $f_{ij}$ maps are marginalized over $P$ and the $f_j$-weighted radius of
