--- a/refs.bib
+++ b/refs.bib
@@ -27599,3 +27599,76 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+
+@ARTICLE{eker18,
+       author = {{Eker}, Z. and {Bak{\i}{\textcommabelow s}}, V. and {Bilir}, S. and
+         {Soydugan}, F. and {Steer}, I. and {Soydugan}, E. and
+         {Bak{\i}{\textcommabelow s}}, H. and
+         {Ali{\c{c}}avu{\textcommabelow s}}, F. and {Aslan}, G. and {Alpsoy}, M.},
+        title = "{Interrelated main-sequence mass-luminosity, mass-radius, and mass-effective temperature relations}",
+      journal = {\mnras},
+     keywords = {catalogues, binaries: eclipsing, binaries: spectroscopic, stars: fundamental parameters, Astrophysics - Solar and Stellar Astrophysics},
+         year = "2018",
+        month = "Oct",
+       volume = {479},
+       number = {4},
+        pages = {5491-5511},
+          doi = {10.1093/mnras/sty1834},
+archivePrefix = {arXiv},
+       eprint = {1807.02568},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018MNRAS.479.5491E},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{stassun19,
+       author = {{Stassun}, Keivan G. and {Oelkers}, Ryan J. and {Paegert}, Martin and
+         {Torres}, Guillermo and {Pepper}, Joshua and {De Lee}, Nathan and
+         {Collins}, Kevin and {Latham}, David W. and {Muirhead}, Philip S. and
+         {Chittidi}, Jay and {Rojas-Ayala}, B{\'a}rbara and {Fleming}, Scott W. and
+         {Rose}, Mark E. and {Tenenbaum}, Peter and {Ting}, Eric B. and
+         {Kane}, Stephen R. and {Barclay}, Thomas and {Bean}, Jacob L. and
+         {Brassuer}, C.~E. and {Charbonneau}, David and {Ge}, Jian and
+         {Lissauer}, Jack J. and {Mann}, Andrew W. and {McLean}, Brian and
+         {Mullally}, Susan and {Narita}, Norio and {Plavchan}, Peter and
+         {Ricker}, George R. and {Sasselov}, Dimitar and {Seager}, S. and
+         {Sharma}, Sanjib and {Shiao}, Bernie and {Sozzetti}, Alessandro and
+         {Stello}, Dennis and {Vanderspek}, Roland and {Wallace}, Geoff and
+         {Winn}, Joshua N.},
+        title = "{The Revised TESS Input Catalog and Candidate Target List}",
+      journal = {\aj},
+     keywords = {stars: fundamental parameters, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Earth and Planetary Astrophysics},
+         year = "2019",
+        month = "Oct",
+       volume = {158},
+       number = {4},
+          eid = {138},
+        pages = {138},
+          doi = {10.3847/1538-3881/ab3467},
+archivePrefix = {arXiv},
+       eprint = {1905.10694},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019AJ....158..138S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@INBOOK{donati18,
+       author = {{Donati}, Jean-Fran{\c{c}}ois and {Kouach}, D. and {Lacombe}, M. and
+         {Baratchart}, S. and {Doyon}, R. and {Delfosse}, X. and
+         {Artigau}, {\'E}tienne and {Moutou}, Claire and {H{\'e}brard}, G. and
+         {Bouchy}, Fran{\c{c}}ois and {Bouvier}, J. and {Alencar}, S. and
+         {Saddlemyer}, L. and {Par{\`e}s}, L. and {Rabou}, P. and {Micheau}, Y. and
+         {Dolon}, F. and {Barrick}, G. and {Hernandez}, O. and {Wang}, S.~Y. and
+         {Reshetov}, V. and {Striebig}, N. and {Challita}, Z. and {Carmona}, A. and
+         {Tibault}, S. and {Martioli}, E. and {Figueira}, P. and {Boisse}, I. and
+         {Pepe}, Francesco},
+        title = "{SPIRou: A NIR Spectropolarimeter/High-Precision Velocimeter for the CFHT}",
+     keywords = {Physics, Astrophysics - Instrumentation and Methods for Astrophysics, Astrophysics - Solar and Stellar Astrophysics},
+    booktitle = {Handbook of Exoplanets, ISBN 978-3-319-55332-0. Springer International Publishing AG, part of Springer Nature, 2018, id.107},
+         year = "2018",
+          eid = {107},
+        pages = {107},
+          doi = {10.1007/978-3-319-55333-7_107},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018haex.bookE.107D},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
