--- a/boundstable.tex
+++ b/boundstable.tex
@@ -10,5 +10,5 @@ $[0.63,0.90]$ & $\mathcal{U}(\log{0.5},\log{2})$ & $\mathcal{U}(\log{50},\log{10
 $[0.08,0.63]$ & $\mathcal{U}(\log{0.5},\log{2})$ & $\mathcal{U}(\log{50},\log{100})$ & $\mathcal{U}(0.6,0.9)$ & $\mathcal{U}(1.2,1.4)$ & $\mathcal{U}(1.8,2)$ & $\mathcal{U}(2.1,2.3)$ \\
 $[0.08,0.42]$ & $\mathcal{U}(\log{0.5},\log{2})$ & $\mathcal{U}(\log{50},\log{100})$ & $\mathcal{U}(0.5,0.7)$ & $\mathcal{U}(1.3,1.4)$ & $\mathcal{U}(1.7,1.8)$ & $\mathcal{U}(1.8,2)$
 \enddata
-\tablecomments{The $r_p$ boundaries on the radius valley are given implicitly by the upper $r_p$ limit of the terrestrial peak and the lower $r_p$ limit of the gaseous peak.}
+\tablecomments{The $r_p$ boundaries on the radius valley are given implicitly by the upper $r_p$ limit on the terrestrial peak and the lower $r_p$ limit on the gaseous peak.}
 \end{deluxetable*}
