--- a/radvalley.tex
+++ b/radvalley.tex
@@ -72,7 +72,7 @@
 \shorttitle{Evolution of the radius valley with stellar mass}
 
 \begin{document}
-\title{Evolution of the Radius Valley Around Low Mass Dwarf Stars with \emph{KEPLER} and \emph{K2}}
+\title{Evolution of the Occurrence Rate of small close-in planets around low mass dwarf stars from \emph{KEPLER} and \emph{K2}}
 \author{Ryan Cloutier\altaffilmark{1,2} et al.}
 
 \email{cloutier@cfa.harvard.edu}
@@ -88,8 +88,6 @@ of Toronto, 50 St. George Street, Toronto, ON, M5S 3H4, Canada}
   Resolving the so-called radius valley around low mass stars can provide valuable
   constraints on the physical mechanisms that sculpt the valley and so far have been largely limited
   by relatively poor counting statistics.
-  %afforded by known transiting planetary systems around low mass
-  %stars compared to around Sun-like stars.
   Here we calculate the occurrence rate of small close-in planets around low mass dwarf stars
   using the known planet populations from both the primary \kepler{} and \ktwo{} missions while
   exploiting the precise \gaia{} DR2 data to refine the stellar radii and masses. 
@@ -97,16 +95,19 @@ of Toronto, 50 St. George Street, Toronto, ON, M5S 3H4, Canada}
   %products for \kepler{} stars which we supplement by conducting
   %injection/recovery tests of transiting planetary signals using our own pipeline to characterize
   %our completeness for the \ktwo{} stars in our sample.
-  After applying appropriate completeness corrections to the empirical planet populations,
-  the radius valley is clearly resolved in the maximum a-posteriori occurrence rates although
-  the gap is not completely void of planets, a feature whose prominence increases with
-  decreasing stellar mass. We also show that the location of valley features evolve to smaller
-  planet sizes with decreasing stellar mass in agreement with competing models of photoevaporation
-  and core-powered mass loss. Although current measurements are insufficient to
-  firmly distinguish either model as the dominant formation pathway of the radius valley,
-  we argue that robust inferences will require $\mathcal{O}(\mathbf{?})$
-  additional confirmed close-in planets around low mass stars which are expected to be
-  uncovered by \tess{} within its extended mission.
+  The application of appropriate completeness corrections to the empirical planet population
+  clearly reveals the radius valley in the maximum a-posteriori occurrence rate map as a
+  function of orbital period and planet radius. The measured slope of the valley with orbital separation
+  is shown to differ in sign from the slope measured around Sun-like stars which suggests that
+  distinct physical processes dominate the formation and evolution of planets in each stellar mass regime.
+  We also show that the prominence and location of radius valley features evolve with stellar mass as
+  the relative occurrence of terrestrial to gaseous planets increases by an order of magnitude from mid-K to
+  mid-M dwarfs while the valley features evolve to smaller
+  planet sizes with decreasing stellar mass in agreement with physical models of photoevaporation,
+  gas-poor formation, and core-powered mass loss. Although current measurements are
+  insufficient to robustly identify any physical model as the dominant formation pathway of the radius valley,
+  we argue that robust inferences may be obtained by \tess{} with $\mathcal{O}(\mathbf{?})$
+  mid-M dwarfs observed with 2-minute cadence.
 \end{abstract}
 
 
@@ -345,20 +346,20 @@ planets---based on their Exoplanet Archive dispositions---with orbital periods
 $P\in [0.5,100]$ days are included. By considering confirmed
 planets only we naturally focus on a subset of the true empirical population of small close-in planets
 without being contaminated by various astrophysical false positive scenarios that may plague the planet
-candidates that are excluded from our initial sample.
+candidates excluded from our initial sample.
 
-The refined stellar radii derived in Sect.~\ref{sect:stars} enable us to derive more accurate and precise
+The refined stellar radii derived in Sect.~\ref{sect:stars} enable us to derive more precise
 planetary radii.
 We refine the planetary radii $r_p$ by retrieving point estimates of each planet's scaled planetary radius
-$r_p/R_s$ which often include a median value 
+$r_p/R_s$ which often includes a median value 
 accompanied by the 16$^{\text{th}}$ and 84$^{\text{th}}$ percentiles. In cases for which the $r_p/R_s$ uncertainties
 are symmetric, we assume that the $r_p/R_s$ posterior PDF is Gaussian. For planets with asymmetric reported
 uncertainties, we fit the $r_p/R_s$ percentiles with a skew-normal distribution using the
 \texttt{scipy.skewnorm python} class. We fit for the location, scale, and shape parameters of the
-skew-normal distribution such that its resulting percentiles are consistent with
+distribution such that its resulting percentiles are consistent with
 the $r_p/R_s$ point estimates reported for each planet. The refined planetary radii are then derived by sampling the
-fitted $r_p/R_s$ and $R_s$ distributions. Based on the refined $r_p$ values we update our planet sample by
-only focusing on planets whose radii are consistent with 0.5-4 R$_{\oplus}$.
+fitted $r_p/R_s$ and $R_s$ distributions. We then update our planet sample by
+only considering planets whose radii are consistent with $r_p = 0.5-4$ R$_{\oplus}$.
 
 From the distributions of $R_s$, \teff{,} $M_s$, and $P$ or each planet and host star, we derive the planets'
 semimajor axes $a$ and insolations $F$ via
@@ -369,7 +370,7 @@ semimajor axes $a$ and insolations $F$ via
 
 Our final sample of confirmed small close-in planets 
 contains 275 \kepler{} and 53 \ktwo{} planets respectively. Their respective median fractional
-radius uncertainties are 7.1\% and 9.0\%. Planet properties of the 326 confirmed planets in our sample
+radius uncertainties are 7.1\% and 9.0\%. Properties of the 328 confirmed planets in our sample
 are reported in Tables~\ref{table:planetsKep} and~\ref{table:planetsK2}. Our planet sample is
 depicted in Fig.~\ref{fig:Ndet} as two-dimensional maps of the number of planet detections in
 the period-radius and insolation-radius spaces. The two-dimensional histogram maps are computed by
@@ -378,7 +379,7 @@ measurement uncertainties and with a fractional precision on $P$ inflated to 20\
 
 \begin{figure*}
   \centering
-  %\includegraphics[width=0.98\hsize]{figures/Ndetmap_Msgt0d0_xbin45_ybin27.png}
+  \includegraphics[width=0.98\hsize]{figures/Ndetmap_Msgt0d0_xbin45_ybin27.png}
   \caption{Empirical population of confirmed close-in planets around low mass stars.
     The distribution of 275 and 53 confirmed planets from \kepler{}
     and \ktwo{} respectively as a function of orbital period, insolation, and planet radius. The two-dimensional maps are
