--- a/refs.bib
+++ b/refs.bib
@@ -27672,3 +27672,117 @@ archivePrefix = {arXiv},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2018haex.bookE.107D},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@ARTICLE{koch10,
+       author = {{Koch}, David G. and {Borucki}, William J. and {Basri}, Gibor and
+         {Batalha}, Natalie M. and {Brown}, Timothy M. and {Caldwell}, Douglas and
+         {Christensen-Dalsgaard}, J{\o}rgen and {Cochran}, William D. and
+         {DeVore}, Edna and {Dunham}, Edward W. and {Gautier}, Thomas N., III and
+         {Geary}, John C. and {Gilliland}, Ronald L. and {Gould}, Alan and
+         {Jenkins}, Jon and {Kondo}, Yoji and {Latham}, David W. and
+         {Lissauer}, Jack J. and {Marcy}, Geoffrey and {Monet}, David and
+         {Sasselov}, Dimitar and {Boss}, Alan and {Brownlee}, Donald and
+         {Caldwell}, John and {Dupree}, Andrea K. and {Howell}, Steve B. and
+         {Kjeldsen}, Hans and {Meibom}, S{\o}ren and {Morrison}, David and
+         {Owen}, Tobias and {Reitsema}, Harold and {Tarter}, Jill and
+         {Bryson}, Stephen T. and {Dotson}, Jessie L. and {Gazis}, Paul and
+         {Haas}, Michael R. and {Kolodziejczak}, Jeffrey and {Rowe}, Jason F. and
+         {Van Cleve}, Jeffrey E. and {Allen}, Christopher and {Chand
+        rasekaran}, Hema and {Clarke}, Bruce D. and {Li}, Jie and
+         {Quintana}, Elisa V. and {Tenenbaum}, Peter and {Twicken}, Joseph D. and
+         {Wu}, Hayley},
+        title = "{Kepler Mission Design, Realized Photometric Performance, and Early Science}",
+      journal = {\apjl},
+     keywords = {instrumentation: photometers, planetary systems, space vehicles: instruments, stars: statistics, stars: variables: general, techniques: photometric, Astrophysics - Earth and Planetary Astrophysics, Astrophysics - Instrumentation and Methods for Astrophysics},
+         year = "2010",
+        month = "Apr",
+       volume = {713},
+       number = {2},
+        pages = {L79-L86},
+          doi = {10.1088/2041-8205/713/2/L79},
+archivePrefix = {arXiv},
+       eprint = {1001.0268},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2010ApJ...713L..79K},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{morales19,
+       author = {{Morales}, J.~C. and {Mustill}, A.~J. and {Ribas}, I. and
+         {Davies}, M.~B. and {Reiners}, A. and {Bauer}, F.~F. and
+         {Kossakowski}, D. and {Herrero}, E. and {Rodr{\'\i}guez}, E. and
+         {L{\'o}pez-Gonz{\'a}lez}, M.~J. and {Rodr{\'\i}guez-L{\'o}pez}, C. and
+         {B{\'e}jar}, V.~J.~S. and {Gonz{\'a}lez-Cuesta}, L. and {Luque}, R. and
+         {Pall{\'e}}, E. and {Perger}, M. and {Baroch}, D. and {Johansen}, A. and
+         {Klahr}, H. and {Mordasini}, C. and {Anglada-Escud{\'e}}, G. and
+         {Caballero}, J.~A. and {Cort{\'e}s-Contreras}, M. and {Dreizler}, S. and
+         {Lafarga}, M. and {Nagel}, E. and {Passegger}, V.~M. and {Reffert}, S. and
+         {Rosich}, A. and {Schweitzer}, A. and {Tal-Or}, L. and {Trifonov}, T. and
+         {Zechmeister}, M. and {Quirrenbach}, A. and {Amado}, P.~J. and
+         {Guenther}, E.~W. and {Hagen}, H. -J. and {Henning}, T. and
+         {Jeffers}, S.~V. and {Kaminski}, A. and {K{\"u}rster}, M. and
+         {Montes}, D. and {Seifert}, W. and {Abell{\'a}n}, F.~J. and
+         {Abril}, M. and {Aceituno}, J. and {Aceituno}, F.~J. and
+         {Alonso-Floriano}, F.~J. and {Ammler-von Eiff}, M. and {Antona}, R. and
+         {Arroyo-Torres}, B. and {Azzaro}, M. and {Barrado}, D. and
+         {Becerril-Jarque}, S. and {Ben{\'\i}tez}, D. and {Berdi{\~n}as}, Z.~M. and
+         {Bergond}, G. and {Brinkm{\"o}ller}, M. and {del Burgo}, C. and
+         {Burn}, R. and {Calvo-Ortega}, R. and {Cano}, J. and
+         {C{\'a}rdenas}, M.~C. and {Guill{\'e}n}, C. Cardona and {Carro}, J. and
+         {Casal}, E. and {Casanova}, V. and {Casasayas-Barris}, N. and
+         {Chaturvedi}, P. and {Cifuentes}, C. and {Claret}, A. and
+         {Colom{\'e}}, J. and {Czesla}, S. and {D{\'\i}ez-Alonso}, E. and
+         {Dorda}, R. and {Emsenhuber}, A. and {Fern{\'a}ndez}, M. and
+         {Fern{\'a}ndez-Mart{\'\i}n}, A. and {Ferro}, I.~M. and
+         {Fuhrmeister}, B. and {Galad{\'\i}-Enr{\'\i}quez}, D. and
+         {Cava}, I. Gallardo and {Vargas}, M.~L. Garc{\'\i}a and
+         {Garcia-Piquer}, A. and {Gesa}, L. and {Gonz{\'a}lez-{\'A}lvarez}, E. and
+         {Hern{\'a}ndez}, J.~I. Gonz{\'a}lez and {Gonz{\'a}lez-Peinado}, R. and
+         {Gu{\`a}rdia}, J. and {Guijarro}, A. and {de Guindos}, E. and
+         {Hatzes}, A.~P. and {Hauschildt}, P.~H. and {Hedrosa}, R.~P. and
+         {Hermelo}, I. and {Arabi}, R. Hern{\'a}ndez and
+         {Otero}, F. Hern{\'a}ndez and {Hintz}, D. and {Holgado}, G. and
+         {Huber}, A. and {Huke}, P. and {Johnson}, E.~N. and {de Juan}, E. and
+         {Kehr}, M. and {Kemmer}, J. and {Kim}, M. and {Kl{\"u}ter}, J. and
+         {Klutsch}, A. and {Labarga}, F. and {Labiche}, N. and {Lalitha}, S. and
+         {Lamp{\'o}n}, M. and {Lara}, L.~M. and {Launhardt}, R. and
+         {L{\'a}zaro}, F.~J. and {Lizon}, J. -L. and {Llamas}, M. and
+         {Lodieu}, N. and {L{\'o}pez del Fresno}, M. and
+         {Salas}, J.~F. L{\'o}pez and {L{\'o}pez-Santiago}, J. and
+         {Madinabeitia}, H. Mag{\'a}n and {Mall}, U. and {Mancini}, L. and {Mand
+        el}, H. and {Marfil}, E. and {Molina}, J.~A. Mar{\'\i}n and
+         {Mart{\'\i}n}, E.~L. and {Mart{\'\i}n-Fern{\'a}ndez}, P. and
+         {Mart{\'\i}n-Ruiz}, S. and {Mart{\'\i}nez-Rodr{\'\i}guez}, H. and
+         {Marvin}, C.~J. and {Mirabet}, E. and {Moya}, A. and {Naranjo}, V. and
+         {Nelson}, R.~P. and {Nortmann}, L. and {Nowak}, G. and {Ofir}, A. and
+         {Pascual}, J. and {Pavlov}, A. and {Pedraz}, S. and
+         {Medialdea}, D. P{\'e}rez and {P{\'e}rez-Calpena}, A. and
+         {Perryman}, M.~A.~C. and {Rabaza}, O. and {Ballesta}, A. Ram{\'o}n and
+         {Rebolo}, R. and {Redondo}, P. and {Rix}, H. -W. and {Rodler}, F. and
+         {Trinidad}, A. Rodr{\'\i}guez and {Sabotta}, S. and {Sadegi}, S. and
+         {Salz}, M. and {S{\'a}nchez-Blanco}, E. and
+         {Carrasco}, M.~A. S{\'a}nchez and {S{\'a}nchez-L{\'o}pez}, A. and
+         {Sanz-Forcada}, J. and {Sarkis}, P. and {Sarmiento}, L.~F. and
+         {Sch{\"a}fer}, S. and {Schlecker}, M. and {Schmitt}, J.~H.~M.~M. and
+         {Sch{\"o}fer}, P. and {Solano}, E. and {Sota}, A. and {Stahl}, O. and
+         {Stock}, S. and {Stuber}, T. and {St{\"u}rmer}, J. and
+         {Su{\'a}rez}, J.~C. and {Tabernero}, H.~M. and {Tulloch}, S.~M. and
+         {Veredas}, G. and {Vico-Linares}, J.~I. and {Vilardell}, F. and
+         {Wagner}, K. and {Winkler}, J. and {Wolthoff}, V. and {Yan}, F. and
+         {Osorio}, M.~R. Zapatero},
+        title = "{A giant exoplanet orbiting a very-low-mass star challenges planet formation models}",
+      journal = {Science},
+     keywords = {PLANET SCI; ASTRONOMY, Astrophysics - Earth and Planetary Astrophysics, Astrophysics - Solar and Stellar Astrophysics},
+         year = "2019",
+        month = "Sep",
+       volume = {365},
+       number = {6460},
+        pages = {1441-1445},
+          doi = {10.1126/science.aax3198},
+archivePrefix = {arXiv},
+       eprint = {1909.12174},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019Sci...365.1441M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
